# vrc_arenas

./: CMakeLists.txt
cmake/: setup.sh.in
models/: CMakeLists.txt
models/arrow_wall/: CMakeLists.txt  manifest.xml  model-1_3.sdf
models/arrow_wall/materials/textures/: CMakeLists.txt
models/arrow_wall/meshes/: CMakeLists.txt  arrow_wall.dae
models/gate/: CMakeLists.txt  model-1_3.sdf
models/gate_number_1/: CMakeLists.txt
models/gate_number_1/materials/textures/: CMakeLists.txt
models/gate_number_1/meshes/: CMakeLists.txt
models/gate_number_2/: CMakeLists.txt
models/gate_number_2/materials/textures/: CMakeLists.txt
models/gate_number_2/meshes/: CMakeLists.txt
models/gate_number_3/: CMakeLists.txt
models/gate_number_3/materials/textures/: CMakeLists.txt
models/gate_number_3/meshes/: CMakeLists.txt
models/gate_number_4/: CMakeLists.txt
models/gate_number_4/materials/textures/: CMakeLists.txt
models/gate_number_4/meshes/: CMakeLists.txt
models/gate_number_5/: CMakeLists.txt
models/gate_number_5/materials/textures/: CMakeLists.txt
models/gate_number_5/meshes/: CMakeLists.txt
models/grass_plane/: CMakeLists.txt  manifest.xml
models/grass_plane/materials/scripts/: CMakeLists.txt
models/ladder/: CMakeLists.txt  manifest.xml
models/mud_atlas_2/: model.sdf
models/orange_barrel/: .model-1_3.sdf.swp  CMakeLists.txt  manifest.xml  model-1_3.sdf
models/orange_barrel/meshes/: CMakeLists.txt
models/pegboard/: CMakeLists.txt  manifest.xml  model-1_3.sdf
models/pegboard/meshes/: CMakeLists.txt  pegboard.dae
models/platform_1/: CMakeLists.txt  model-1_3.sdf
models/platform_1/materials/textures/: CMakeLists.txt
models/platform_1/meshes/: CMakeLists.txt  platform_1.dae
models/platform_2/: CMakeLists.txt  model-1_3.sdf
models/platform_2/materials/textures/: CMakeLists.txt
models/platform_2/meshes/: CMakeLists.txt  platform_2.dae
models/platform_3/: CMakeLists.txt  manifest.xml
models/platform_3/materials/textures/: CMakeLists.txt
models/platform_3/meshes/: CMakeLists.txt
models/platform_4/: CMakeLists.txt  model.sdf
models/platform_4/materials/textures/: CMakeLists.txt
models/platform_4/meshes/: CMakeLists.txt
models/starting_pen/: CMakeLists.txt  manifest.xml  model-1_3.sdf
models/stepping_block/: CMakeLists.txt
models/stepping_block/materials/textures/: CMakeLists.txt
models/stepping_block/meshes/: CMakeLists.txt
models/vehicle_gate/: CMakeLists.txt
models/vehicle_gate/materials/textures/: CMakeLists.txt
models/vrc_firehose/: CMakeLists.txt  manifest.xml  model.sdf
models/vrc_firehose/materials/textures/: CMakeLists.txt
models/vrc_firehose/meshes/: CMakeLists.txt  vrc_firehose.dae
models/vrc_firehose_long/: CMakeLists.txt
models/vrc_firehose_long/meshes/: CMakeLists.txt
models/vrc_firehose_long_a/: model.config  model.sdf
models/vrc_firehose_long_a/meshes/: CMakeLists.txt
models/vrc_firehose_long_b/: CMakeLists.txt  model.config  model.sdf
models/vrc_firehose_long_c/: model.sdf
models/vrc_grass_plane2/: model.sdf
models/vrc_heightmap/: CMakeLists.txt  model.sdf
models/vrc_heightmap_1/: CMakeLists.txt
models/vrc_heightmap_3/: model.sdf
models/vrc_standpipe/: CMakeLists.txt  model.sdf
models/vrc_standpipe/meshes/: CMakeLists.txt
models/vrc_standpipe_a/: CMakeLists.txt  model.config  model.sdf
models/vrc_standpipe_a/meshes/: CMakeLists.txt
models/vrc_standpipe_b/: model.sdf
models/vrc_table/: CMakeLists.txt
models/vrc_valve/: CMakeLists.txt  model.sdf
models/vrc_valve/meshes/: CMakeLists.txt
models/vrc_valve_a/: CMakeLists.txt  model.config  model.sdf
models/vrc_valve_a/meshes/: CMakeLists.txt
ros/vrc_finals/test/: CMakeLists.txt  vrc_final_task10_gzlog_stop.test  vrc_final_task10_gzlog_stop_30min_run.test  vrc_final_task11_gzlog_stop.test  vrc_final_task11_gzlog_stop_30min_run.test  vrc_final_task12_gzlog_stop.test  vrc_final_task12_gzlog_stop_30min_run.test  vrc_final_task13_gzlog_stop.test  vrc_final_task13_gzlog_stop_30min_run.test  vrc_final_task14_gzlog_stop.test  vrc_final_task14_gzlog_stop_30min_run.test  vrc_final_task15_gzlog_stop.test  vrc_final_task15_gzlog_stop_30min_run.test  vrc_final_task1_atlas_pubs.test  vrc_final_task1_atlas_pubs_gpu.test  vrc_final_task1_gzlog_stop.test  vrc_final_task1_gzlog_stop_30min_run.test  vrc_final_task1_hand_pubs.test  vrc_final_task1_hand_pubs_gpu.test  vrc_final_task1_scoring.test  vrc_final_task2_gzlog_stop.test  vrc_final_task2_gzlog_stop_30min_run.test  vrc_final_task2_scoring.test  vrc_final_task3_gzlog_stop.test  vrc_final_task3_gzlog_stop_30min_run.test  vrc_final_task3_scoring.test  vrc_final_task4_gzlog_stop.test  vrc_final_task4_gzlog_stop_30min_run.test  vrc_final_task4_scoring.test  vrc_final_task5_gzlog_stop.test  vrc_final_task5_gzlog_stop_30min_run.test  vrc_final_task5_scoring.test  vrc_final_task6_gzlog_stop.test  vrc_final_task6_gzlog_stop_30min_run.test  vrc_final_task6_scoring.test  vrc_final_task7_gzlog_stop.test  vrc_final_task7_gzlog_stop_30min_run.test  vrc_final_task7_scoring.test  vrc_final_task8_gzlog_stop.test  vrc_final_task8_gzlog_stop_30min_run.test  (+4 more)
worlds/: CMakeLists.txt  final_task_1.world  final_task_2.world  final_task_3.world  final_task_a.world  qual_task_1.world  qual_task_2.world  qual_task_3.world  qual_task_4.world  qual_task_a.world  qual_task_b.world  task1a.world  task1b.world  task1c.world  task1d.world  task1e.world  task2a.world  task3a.world  task3b.world  vrc_final_task1.world  vrc_final_task10.world  vrc_final_task11.world  vrc_final_task12.world  vrc_final_task13.world  vrc_final_task14.world  vrc_final_task15.world  vrc_final_task2.world  vrc_final_task3.world  vrc_final_task4.world  vrc_final_task5.world  vrc_final_task6.world  vrc_final_task7.world  vrc_final_task8.world  vrc_final_task9.world
(+43 files in other folders)
