add_subdirectory(arrow_wall)
add_subdirectory(pegboard)
add_subdirectory(gate)
add_subdirectory(gate_number_1)
add_subdirectory(gate_number_2)
add_subdirectory(gate_number_3)
add_subdirectory(gate_number_4)
add_subdirectory(gate_number_5)
add_subdirectory(grass_plane)
add_subdirectory(platform_1)
add_subdirectory(platform_2)
add_subdirectory(platform_3)
add_subdirectory(platform_4)
add_subdirectory(stepping_block)
add_subdirectory(ladder)
add_subdirectory(vehicle_gate)
add_subdirectory(vrc_firehose)
add_subdirectory(vrc_firehose_long)
add_subdirectory(vrc_standpipe)
add_subdirectory(vrc_heightmap)
add_subdirectory(vrc_heightmap_1)
add_subdirectory(vrc_valve)
